syntax = "proto3";
package internal;

import "settings.proto";
import "status.proto";
import "general.proto";
import "messages.proto";
import "contacts.proto";

option go_package = "/model";

message InternalContact {
    string id = 1;
    string name = 2;
}

message InternalConfig {
    string version = 1;
    string status = 2;
    repeated InternalContact contacts = 3;
    string uploadDir = 4;
    map<string,string> users = 5;
    map<string,string> inboundMedia = 6;
    whatsapp.ApplicationSettings applicationSettings = 7;
    whatsapp.ProfileAbout profileAbout = 8;
    whatsapp.BusinessProfile businessProfile = 9;
    string profilePhotoFilename = 10;
    bool verified = 11;
    bytes webhookCA = 12;
    string businessAccountId = 13;
    string phoneNumberId = 14;
    string displayPhoneNumber = 15;
}

message WebhookRequest {
    repeated whatsapp.Contact contacts = 1;
    repeated whatsapp.Message messages = 2;
    repeated whatsapp.Status statuses = 3;
    repeated whatsapp.Error errors = 4;
    int32 errorCounter = 5;
}

// WebhookMetadata represents the metadata for a webhook notification
message WebhookMetadata {
    string display_phone_number = 1;
    string phone_number_id = 2;
}

// WebhookValue represents the value object in a webhook change
message WebhookValue {
    string messaging_product = 1;
    WebhookMetadata metadata = 2;
    repeated whatsapp.Contact contacts = 3;
    repeated whatsapp.Message messages = 4;
    repeated whatsapp.Status statuses = 5;
    repeated whatsapp.Error errors = 6;
}

// WebhookChange represents a change in a webhook entry
message WebhookChange {
    string field = 1;
    WebhookValue value = 2;
}

// WebhookEntry represents an entry in the webhook payload
message WebhookEntry {
    string id = 1;
    repeated WebhookChange changes = 2;
}

// WebhookPayload represents the complete webhook payload following Meta's format
message WebhookPayload {
    string object = 1;
    repeated WebhookEntry entry = 2;
}
